fix: html render in dark mode

--- a/packages/libro-output/src/index.less
+++ b/packages/libro-output/src/index.less
@@ -444,7 +444,7 @@
 |---------------------------------------------------------------------------- */
 
 .libro-html-common-render {
-  color: var(--jp-content-font-color1);
+  color: var(--mana-libro-text-default-color);
   font-family: var(--jp-content-font-family);
   font-size: var(--jp-content-font-size1);
   line-height: var(--jp-content-line-height);
@@ -589,7 +589,7 @@
 }
 
 .libro-html-common-render hr {
-  color: var(--jp-border-color2);
+  color: var(--mana-libro-text-default-color);
   background-color: var(--jp-border-color1);
   margin-top: 1em;
   margin-bottom: 1em;
@@ -622,7 +622,7 @@
   border-collapse: collapse;
   border-spacing: 0;
   border: none;
-  color: var(--jp-ui-font-color1);
+  color: var(--mana-libro-text-default-color);
   font-size: var(--jp-ui-font-size1);
   table-layout: fixed;
   // margin-left: auto;
@@ -666,11 +666,11 @@
 }
 
 .libro-html-common-render tbody tr:nth-child(even) {
-  background: var(--jp-rendermime-table-row-background);
+  background: var(--mana-libro-menu-hover-color);
 }
 
 .libro-html-common-render tbody tr:hover {
-  background: var(--jp-rendermime-table-row-hover-background);
+  background: var(--mana-libro-menu-hover-color);
 }
 
 .libro-html-common-render p {
